K8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
   name: crud
---
apiVersion: v1
kind: Namespace
metadata:
   name: domain
