K8s/account-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account
  namespace: domain
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: pnkjsmwl/account:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9095
      imagePullSecrets:
      - name: my-sec
