K8s/configserver-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configserver
  namespace: domain
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
      - name: configserver
        image: pnkjsmwl/configserver:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: my-sec
