K8s/customerprofile-crud-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customerprofile-crud
  namespace: crud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customerprofile-crud
    spec:
      containers:
      - name: customerprofile-crud
        image: pnkjsmwl/customerprofile-crud:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8097  
      imagePullSecrets:
      - name: my-sec
