K8s/customerprofile-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customerprofile
  namespace: domain
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customerprofile
    spec:
      containers:
      - name: customerprofile
        image: pnkjsmwl/customerprofile:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9097
      imagePullSecrets:
      - name: my-sec
