K8s/transaction-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: transaction
  namespace: domain
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: pnkjsmwl/transaction:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9096
      imagePullSecrets:
      - name: my-sec
